# interior-decorator-app

./: AI_INTERIOR_DOCS.md  FAQ_VIEWERS.md  PRESENTATION_SCRIPT.md  README.md  docker-compose.yml  pyproject.toml
api/: .gitignore  Dockerfile  README.md  config.py  depth.py  inference.py  main.py  models.py  prompt_builder.py  pyproject.toml  routes.py  segmentation.py
app/: Dockerfile  README.md  api_client.py  package.json  pnpm-lock.yaml  ui.py
app/src/app/: page.tsx  providers.tsx
app/src/components/: ImageComparison.tsx  ImageUploader.tsx  ObjectsChecklist.tsx  ResultDisplay.tsx  StyleSelector.tsx
backend/: .gitignore  inference.py  main.py  pyproject.toml  requirements.txt  test_mps.py
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/components/: ImageUploader.tsx  StyleSelector.tsx
presentation-prompts/: canva_presentation_script.md  slide_01_introduction.md  slide_02_problem_and_solution.md  slide_03_system_architecture.md  slide_04_ai_models_explained.md  slide_05_how_it_works.md  slide_06_prompt_engineering.md  slide_07_demo_and_results.md  slide_08_conclusion_and_future.md
